<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/action_view" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/corners_hui_line"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aboutus_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/rog_http_yellow35"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/org_http"
            android:textColor="@color/hui_text_xh" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/hui_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/weixin_green35"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/weixin_public"
            android:textColor="@color/hui_text_xh" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/hui_line" />

        <TextView
            android:id="@+id/aboutus_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/serve_tel_yellow35"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/serve_tel"
            android:textColor="@color/hui_text_xh" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cName"
        android:textColor="@color/hui_text_xh"
        android:textSize="@dimen/text_l" />

</LinearLayout>